<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_register">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.chatapp.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.register.RegisterActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/top_guide_line">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.userNameError}"
                app:boxBackgroundMode="filled">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:background="@color/transparent"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:text="@={vm.userName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.emailError}"
                app:boxBackgroundMode="filled">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.passwordError}"
                app:boxBackgroundMode="filled">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:background="@color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={vm.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirmation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.passwordConfirmationError}"
                app:boxBackgroundMode="filled">

                <EditText
                    android:id="@+id/password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:background="@color/transparent"
                    android:hint="@string/password_confirmation"
                    android:inputType="textPassword"
                    android:text="@={vm.passwordConfirmation}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/already_have_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="@{()->vm.navigateToLogin()}"
                android:text="@string/already_have_account"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_color"
                android:drawableEnd="@drawable/ic_next"
                android:enabled="@{vm.isCreated?false:true}"
                android:onClick="@{()->vm.register()}"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textSize="18sp" />
            <!--android:visibility="@{vm.isCreated?View.INVISIBLE:View.VISIBLE}"-->
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>