<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_add_room">

    <data>

        <variable
            name="vm"
            type="com.example.chatapp.ui.addRoom.AddRoomViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="24dp"
        app:cardElevation=".3dp"
        app:contentPadding="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/create_new_room"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:contentDescription="@string/add_room_title"
                android:src="@drawable/add_room_group" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/room_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.roomNameError}"
                app:boxBackgroundMode="filled">

                <EditText
                    android:id="@+id/room_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@color/transparent"
                    android:hint="@string/room_title"
                    android:inputType="text"
                    android:padding="8dp"
                    android:text="@={vm.roomName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/categoriesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginVertical="12dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/room_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.roomDescError}"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/room_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@color/transparent"
                    android:gravity="start"
                    android:hint="@string/room_description"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:padding="8dp"
                    android:text="@={vm.roomDesc}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{vm.isAddedRoom()?false:true}"
                android:onClick="@{()->vm.createRoom()}"
                android:text="@string/add_room_title"
                android:textAllCaps="false" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</layout>