<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_login">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.chatapp.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.login.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/top_guide_line">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.emailError}"
                app:boxBackgroundMode="filled">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:Error="@{vm.passwordError}"
                app:boxBackgroundMode="filled">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:background="@color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={vm.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/don_t_have_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="@{()->vm.navigateToRegister()}"
                android:text="@string/don_t_have_account"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_color"
                android:drawableEnd="@drawable/ic_next"
                android:enabled="@{vm.isCreated?false:true}"
                android:onClick="@{()->vm.login()}"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="18sp" />
            <!--android:visibility="@{vm.isCreated?View.INVISIBLE:View.VISIBLE}"-->
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    tools:showIn="@layout/activity_login"-->
    <!--    >-->

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:padding="12dp"-->
    <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--        tools:context=".ui.register.RegisterActivity">-->

    <!--        <androidx.constraintlayout.widget.Guideline-->
    <!--            android:id="@+id/top_guide_line"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="horizontal"-->
    <!--            app:layout_constraintGuide_percent=".25" />-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="vertical"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/top_guide_line">-->

    <!--            <com.google.android.material.textfield.TextInputLayout-->
    <!--                android:id="@+id/email_layout"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginBottom="8dp"-->
    <!--                >-->

    <!--                <EditText-->
    <!--                    android:id="@+id/email"-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:hint="@string/email"-->
    <!--                    android:inputType="textEmailAddress"-->
    <!--                    android:background="@color/transparent" />-->
    <!--            </com.google.android.material.textfield.TextInputLayout>-->

    <!--            <com.google.android.material.textfield.TextInputLayout-->
    <!--                android:id="@+id/password_layout"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginBottom="8dp"-->
    <!--                >-->

    <!--                <EditText-->
    <!--                    android:id="@+id/password"-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:hint="@string/password"-->
    <!--                    android:inputType="textPassword"-->
    <!--                    android:background="@color/transparent" />-->
    <!--            </com.google.android.material.textfield.TextInputLayout>-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:text="@string/don_t_have_account"-->
    <!--                android:textSize="18sp"-->
    <!--                android:layout_margin="6dp"-->
    <!--                />-->

    <!--            <Button-->
    <!--                android:id="@+id/register"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:backgroundTint="@color/main_color"-->
    <!--                android:drawableEnd="@drawable/ic_next"-->
    <!--                android:textAllCaps="false"-->
    <!--                android:paddingVertical="16dp"-->
    <!--                android:paddingHorizontal="32dp"-->
    <!--                android:textSize="18sp"-->
    <!--                android:text="@string/login"-->
    <!--                />-->

    <!--        </LinearLayout>-->


    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
    <!--</layout>-->

